--- a/configs/UBW/g1.0_c5_t0.2.yaml
+++ b/configs/UBW/g1.0_c5_t0.2.yaml
@@ -1,12 +1,14 @@
 generator:
-  type: "unbiased"
-  mode: "delta"
+  type: "UBW"
+  mode: "gamma"
+  gamma: 1.0
   ctx_n: 5
   generate_kwargs:
     do_sample: True
     num_beams: 1
     top_k: 0
 detector:
-  type: "unbiased"
-  mode: "delta"
+  type: "UBW"
+  mode: "gamma"
+  temperature: 0.2
   ctx_n: 5
